<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.bpi.BpiViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/text_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countdown"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_bitcoinPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bitcoin_current_price"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.bpi.bpi.USD.code}"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@{String.valueOf(viewModel.bpi.bpi.USD.rate_float)}"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dollar_sign"
                android:layout_marginStart="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.bpi.bpi.GBP.code}"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{String.valueOf(viewModel.bpi.bpi.GBP.rate_float)}"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pound_sign"
                android:layout_marginStart="5dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.bpi.bpi.EUR.code}"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@{String.valueOf(viewModel.bpi.bpi.EUR.rate_float)}"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_sign"
                android:layout_marginLeft="5dp"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_convert_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/convert_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_currency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/currency_array"
            android:prompt="@string/spinner_prompt" />

        <EditText
            android:id="@+id/edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter amount"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/button_convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_button" />

        <TextView
            android:id="@+id/text_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_result"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.format(java.util.Locale.US, &quot;%.6f&quot;, viewModel.resultLiveData != null ? viewModel.resultLiveData : 0)}"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/btc_currency"
                android:textSize="18sp" />

        </LinearLayout>



        <Button
            android:id="@+id/button_show_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show History Price"
            android:onClick="onShowTableClick"/>



    </LinearLayout>
</layout>
